--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@monvechen/sleep",
-  "version": "1.0.2",
-  "description": "for manager cookies",
+  "version": "1.0.3",
+  "description": "easy way to await sleep",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -21,8 +21,8 @@
     "url": "git+https://github.com/MonveChen/sleep.git"
   },
   "keywords": [
-    "cookie",
-    "manager"
+    "sleep",
+    "await"
   ],
   "author": "Monve",
   "license": "Apache-2.0",
